--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -12,7 +12,7 @@
 }
 
 .main{
-    --primary: #35a4b8;
+    --primary: #3572b8;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -35,7 +35,7 @@
     align-items:center;
     background-color: white;
     border-radius: 40px;
-    box-shadow: 0px 0px 10px 0px rgba(37, 35, 35, 0.904);
+    box-shadow: 0px 0px 10px 0px var(--primary);
     margin-bottom: 30px;
   }
   .main .box2{
