--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -12,7 +12,7 @@
 }
 
 .main{
-    --primary: red;
+    --primary: #3572b8;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -41,22 +41,11 @@
   .main .box2{
     height: auto;
     padding-bottom: 20px;
-    background-color: white;
-    color: black;
-    border-radius: 50px;
-  }
-  .box2topo{
-    width:100%;
-    display: flex;
-    justify-content: space-around;
-  }
-  .box2middle{
-    width: 100%;
-  }
-  .boxCargo{
-    width: 100%;
-    display: flex;
+    display: grid;
+    grid-template-columns: 200px 200px 200px;
     justify-content: center;
+    align-items:center;
+    background-color: white;
   }
   .boxTitulo{
     width: 100%;
@@ -78,7 +67,6 @@
     padding-bottom: 20px;
   }
   .boxInputs2{
-    display: none;
     width: 100%;
     padding-left: 49px;
     padding-right: 49px;
@@ -186,16 +174,9 @@
         border-radius: 0!important;
         display: flex!important;
         flex-direction: column!important;
-        align-items:center!important;
     }
     .box2 > div{
       width: 80%;
-    }
-    .box2topo{
-      flex-direction: column!important;
-    }
-    .box2middle > fieldset div{
-      flex-direction: column!important;
     }
     .boxInputs2{
         width: 100%!important;
