--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,10 +23,10 @@ body > div{
 }
 body {
   color: rgb(var(--foreground-rgb));
-  background: url(../../public/strokemaster.png) black;
-  background-size: 1000px;
+  background: url(../../public/hayes-bg.png) white;
+  background-size: contain;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top;
 
 
   display: flex;
