--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -12,7 +12,7 @@
 }
 
 .main{
-    --primary: #3572b8;
+    --primary: green;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -35,7 +35,7 @@
     align-items:center;
     background-color: white;
     border-radius: 40px;
-    box-shadow: 0px 0px 10px 0px var(--primary);
+    box-shadow: 0px 0px 10px 0px green;
     margin-bottom: 30px;
   }
   .main .box2{
@@ -80,11 +80,11 @@
   .boxTotal{
     width: 150px;
     height: auto;
-    border: 1px solid rgba(37, 35, 35, 0.904);
+    border: 1px solid green;
     border-radius: 20px;
     text-align: center;
     background-color: white;
-    box-shadow: 0px 0px 10px 0px var(--primary);
+    box-shadow: 0px 0px 10px 0px green;
   }
   .boxTotal h1{
     color:white;
@@ -129,7 +129,7 @@
     padding-right: 5px;
   }
   .assinatura p{
-    color: rgba(128, 128, 128, 0.336);
+    color: rgba(0, 0, 0, 0.699);
   }
   @media (max-width: 1000px){
 
