--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -35,7 +35,7 @@
     align-items:center;
     background-color: white;
     border-radius: 40px;
-    box-shadow: 0px 0px 10px 0px green;
+    box-shadow: 0px 0px 10px 0px red;
     margin-bottom: 30px;
   }
   .main .box2{
